--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,19 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/.*",
             "dest": "index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
